--- a/DATA/indexsentiment.html
+++ b/DATA/indexsentiment.html
@@ -112,7 +112,7 @@
     <div class="container">
         <div class="product">
             <div class="product-image">
-                <img src="/api/placeholder/200/200" alt="Sản phẩm">
+                <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/d/i/dien-thoai-samsung-galaxy-s25-ultra_3__3.png" alt="Sản phẩm" sizes="20px" style="width: 100%; height: 100%; object-fit: cover; border-radius: 4px;">
             </div>
             <div class="product-details">
                 <h1>Điện thoại Galaxy S25 Ultra</h1>
